--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Поэт и LLM</title>
         <style>
             :root {
@@ -3324,4 +3325,5 @@
         </article>
     </main>
     </body>
+
 </html>
