--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Поэт и LLM</title>
         <style>
+            @font-face {
+                font-family: "Google Sans";
+                src: url("fonts/Google%20Sans/GoogleSans-VariableFont_GRAD,opsz,wght.ttf") format("truetype");
+            }
+            @font-face {
+                font-family: "Google Sans";
+                src: url("fonts/Google%20Sans/GoogleSans-Italic-VariableFont_GRAD,opsz,wght.ttf") format("truetype");
+                font-style: italic;
+            }
+            
             :root {
                 color-scheme: dark light;
-                font: 16px/1.5 SegoeUI, "Segoe UI", Arial, sans-serif;
+                font: 16px/1.5 "Google Sans", SegoeUI, "Segoe UI", Arial, sans-serif;
             }
             main.articles {
                 display: flex;
@@ -3327,3 +3337,4 @@
     </body>
 
 </html>
+
